--- a/projectk/package.json
+++ b/projectk/package.json
@@ -10,10 +10,10 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redis": "^4.6.7",
     "web-vitals": "^2.1.4",
-
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -26,7 +26,6 @@
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,5 +51,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
