--- a/projectk/package.json
+++ b/projectk/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redis": "^4.6.7",
+    "restify": "^11.1.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
