--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.4.4",
     "next": "13.4.8",
+    "nodejs": "^0.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "restify": "^11.1.0"
   }
 }
