--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.1",
+    "react-swipeable-views": "^0.14.0",
     "restify": "^11.1.0"
   }
 }
