--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next pwa",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-swipeable-views": "^0.14.0",
     "restify": "^11.1.0"
+  },
+  "devDependencies": {
+    "next-pwa": "^5.6.0"
   }
 }
