--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mysql2": "^3.4.4",
     "next": "13.4.8",
