--- a/my-app/public/manifest.json
+++ b/my-app/public/manifest.json
@@ -7,12 +7,12 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "./icon1.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": ".icon2.png",
+      "src": "./icon-192x192.png",
       "sizes": "512x512",
       "type": "image/png"
     }
