--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mysql2": "^3.4.4",
     "next": "13.4.8",
