--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.1",
-    "restify": "^11.1.0"
+    "react-slick": "^0.29.0",
+    "restify": "^11.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "next-pwa": "^5.6.0"
