--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "restify-cors-middleware": "^1.1.1"
