--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "restify-cookies": "^0.2.6",
     "restify-cors-middleware": "^1.1.1"
   }
 }
