--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^3.4.4",
     "next": "13.4.8",
     "nodejs": "^0.0.0",
+    "nookies": "^2.5.2",
     "pwa": "^1.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
