--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^3.4.4",
     "next": "13.4.8",
     "nodejs": "^0.0.0",
