페이지이름변경

--- a/my-app/public/manifest.json
+++ b/my-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My React App",
-  "short_name": "React App",
+  "name": "AVATOON",
+  "short_name": "AVATOON",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffffff",
