--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-CLIENT_SECRET=PAzCoJ4ZzolWEEbhU2V39u0MeQEaDRT8
+// .env 파일 내용
+CLIENT_ID=6298e4ccbcce464caa91f6a4a0e9c7a3
+CLIENT_SECRET=caNhtDvsdnv2Bu4HJEo74EKXVR6e1zA6
