--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "figlet": "^1.6.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
