--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "nodejs": "^0.0.0",
+    "querystring": "^0.2.1",
     "restify": "^11.1.0",
     "restify-cookies": "^0.2.6",
     "restify-cors-middleware": "^1.1.1"
