--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "figlet": "^1.6.0",
     "jsonwebtoken": "^9.0.1",
@@ -21,6 +22,5 @@
     "restify-cookies": "^0.2.6",
     "restify-cors-middleware": "^1.1.1"
   },
-  "devDependencies": {},
   "description": ""
 }
