--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,8 +18,8 @@
     "nodejs": "^0.0.0",
     "nookies": "^2.5.2",
     "pwa": "^1.9.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-slick": "^0.29.0",
     "restify": "^11.1.0",
@@ -31,5 +31,6 @@
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publish": ".next"
 }
