--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build && next pwa",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
@@ -26,6 +28,8 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/next-pwa": "^5.6.4",
+    "import-glob": "^1.5.0",
     "next-pwa": "^5.6.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
