--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "figlet": "^1.6.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
