--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^3.4.4",
     "next": "^13.4.12",
