--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^3.4.4",
     "next": "^13.4.12",
     "nodejs": "^0.0.0",
