--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@plaiceholder/next": "^3.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
@@ -28,6 +29,8 @@
     "restify": "^11.1.0",
     "slick-carousel": "^1.8.1"
   },
+  "proxy":"https://openapi.naver.com",
+
   "devDependencies": {
     "import-glob": "^1.5.0",
     "next-pwa": "^5.6.0"
